--- a/index.html
+++ b/index.html
@@ -1,6 +1,85 @@
-<HTML>
-<HEAD></HEAD>
-<BODY>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DonGioZone</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            padding: 20px 10px;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+        }
+        section {
+            padding: 20px;
+            margin: 10px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .hero {
+            text-align: center;
+            padding: 50px 20px;
+            background-color: #007bff;
+            color: #fff;
+            border-radius: 5px;
+        }
+        .hero h2 {
+            margin: 0;
+            font-size: 2em;
+        }
+        .about, .files, .contact {
+            margin-top: 20px;
+        }
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 10px;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Welcome to DonGioZone</h1>
+    </header>
 
-</BODY>
-</HTML>
+    <section class="hero">
+        <h2>Your Personal Hub</h2>
+        <p>Welcome to my personal page! Explore files, get in touch, and stay tuned for more updates.</p>
+    </section>
+
+    <section class="about">
+        <h3>About Me</h3>
+        <p>Hi, I'm Don Gio! This is my personal space where I share files, ideas, and more. In the future, I'll expand this site with more features and content. Stay tuned!</p>
+    </section>
+
+    <section class="files">
+        <h3>Shared Files</h3>
+        <p>Here you will find the files I have shared. (File sharing functionality to be added later)</p>
+    </section>
+
+    <section class="contact">
+        <h3>Contact Me</h3>
+        <p>If you would like to reach out, feel free to drop me a message at <a href="mailto:youremail@domain.com">youremail@domain.com</a>.</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 DonGioZone. All rights reserved.</p>
+    </footer>
+</body>
+</html>
