--- a/index.html
+++ b/index.html
@@ -5,51 +5,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DonGioZone</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;700&display=swap');
+
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto Slab', serif;
+            background-color: #1e1e1e;
+            color: #dcdcdc;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px 10px;
+            background-color: #2c2c2c;
+            width: 100%;
+            padding: 20px 0;
             text-align: center;
         }
         header h1 {
             margin: 0;
+            font-size: 2.5em;
+            font-weight: 700;
+            color: #ffcc00;
         }
         section {
+            width: 80%;
+            max-width: 800px;
             padding: 20px;
-            margin: 10px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin: 20px 0;
+            background-color: #2c2c2c;
+            border-radius: 8px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
         }
         .hero {
             text-align: center;
-            padding: 50px 20px;
-            background-color: #007bff;
-            color: #fff;
-            border-radius: 5px;
+            padding: 40px 20px;
+            background-color: #3a3a3a;
+            color: #ffcc00;
+            border-radius: 8px;
         }
         .hero h2 {
             margin: 0;
             font-size: 2em;
+            font-weight: 400;
         }
         .about, .files, .contact {
-            margin-top: 20px;
+            text-align: center;
+        }
+        .about h3, .files h3, .contact h3 {
+            font-size: 1.8em;
+            margin-bottom: 15px;
+            color: #ffcc00;
         }
         footer {
-            background-color: #333;
-            color: #fff;
+            background-color: #2c2c2c;
+            color: #dcdcdc;
             text-align: center;
             padding: 10px;
+            width: 100%;
             position: fixed;
             bottom: 0;
-            width: 100%;
         }
     </style>
 </head>
@@ -75,7 +91,7 @@
 
     <section class="contact">
         <h3>Contact Me</h3>
-        <p>If you would like to reach out, feel free to drop me a message at <a href="mailto:youremail@domain.com">youremail@domain.com</a>.</p>
+        <p>If you would like to reach out, feel free to drop me a message at <a href="mailto:youremail@domain.com" style="color: #ffcc00;">youremail@domain.com</a>.</p>
     </section>
 
     <footer>
