--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DonGioZone - Home</title>
+    <title>DonGioZone - About</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to DonGioZone</h1>
+        <h1>About Me</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
@@ -17,9 +17,9 @@
         </nav>
     </header>
 
-    <section class="hero">
-        <h2>Your Personal Hub</h2>
-        <p>Welcome to my personal page! Explore files, get in touch, and stay tuned for more updates.</p>
+    <section class="about">
+        <h3>About Me</h3>
+        <p>Hi, I'm Don Gio! This is my personal space where I share files, ideas, and more. In the future, I'll expand this site with more features and content. Stay tuned!</p>
     </section>
 
     <footer>
