--- a/files.html
+++ b/files.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DonGioZone - Home</title>
+    <title>DonGioZone - Files</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to DonGioZone</h1>
+        <h1>Shared Files</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
@@ -17,9 +17,9 @@
         </nav>
     </header>
 
-    <section class="hero">
-        <h2>Your Personal Hub</h2>
-        <p>Welcome to my personal page! Explore files, get in touch, and stay tuned for more updates.</p>
+    <section class="files">
+        <h3>Shared Files</h3>
+        <p>Here you will find the files I have shared. (File sharing functionality to be added later)</p>
     </section>
 
     <footer>
