--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DonGioZone - Home</title>
+    <title>DonGioZone - Contact</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to DonGioZone</h1>
+        <h1>Contact Me</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
@@ -17,9 +17,9 @@
         </nav>
     </header>
 
-    <section class="hero">
-        <h2>Your Personal Hub</h2>
-        <p>Welcome to my personal page! Explore files, get in touch, and stay tuned for more updates.</p>
+    <section class="contact">
+        <h3>Contact Me</h3>
+        <p>If you would like to reach out, feel free to drop me a message at <a href="mailto:youremail@domain.com" style="color: #ffcc00;">youremail@domain.com</a>.</p>
     </section>
 
     <footer>
