--- a/awesomelinks.html
+++ b/awesomelinks.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DonGioZone - Files</title>
+    <title>DonGioZone - Awesome Links</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Shared Files</h1>
+        <h1>Awesome Links</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
@@ -19,8 +19,15 @@
     </header>
 
     <section class="files">
-        <h3>Shared Files</h3>
-        <p>Here you will find the files I have shared. (File sharing functionality to be added later)</p>
+        <h3>Awesome Links to Remember</h3>
+        <p>Here is a list of links that are awesome for all kinds of reasons, too cool to forget. </p>
+		<p><a href="https://venice.ai/chat">Great uncensored AI</a></p>
+		<p><a href="https://www.youtube.com/watch?v=i5pflw2QmMM">Guy builds a wasp killing robot</a></p>
+		<p><a href=""></a></p>
+		<p><a href=""></a></p>
+		<p><a href=""></a></p>
+		<p><a href=""></a></p>
+		
     </section>
 
     <footer>
