--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="files.html">Files</a>
+			<a href="awesomelinks.html">Awesome Links</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
