--- a/about.html
+++ b/about.html
@@ -10,9 +10,10 @@
     <header>
         <h1>About Me</h1>
         <nav>
-            <a href="index.html">Home</a>
+           <a href="index.html">Home</a>
             <a href="about.html">About</a>
             <a href="files.html">Files</a>
+			<a href="awesomelinks.html">Awesome Links</a>
             <a href="contact.html">Contact</a>
         </nav>
     </header>
